Issue #2832974 by kruhak, antongp: Make Reference entities revisionable

--- a/modules/bibcite_entity/bibcite_entity.libraries.yml
+++ b/modules/bibcite_entity/bibcite_entity.libraries.yml
@@ -1,5 +1,9 @@
 widget:
-  version: VERSION
   css:
     theme:
       css/widget.css: {}
+
+reference.admin:
+  css:
+    theme:
+      css/reference.admin.css: {}
