--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "adci/full-name-parser": "^0.2",
     "technosophos/LibRIS": "~2.0",
     "audiolabs/bibtexparser": "dev-master",
-    "caseyamcl/php-marc21": "~1.0"
+    "caseyamcl/php-marc21": "~1.0",
+    "drupal/entity": "^1.0"
   }
 }
