--- a/modules/bibcite_entity/config/optional/views.view.bibcite_keyword_admin.yml
+++ b/modules/bibcite_entity/config/optional/views.view.bibcite_keyword_admin.yml
@@ -6,7 +6,7 @@ dependencies:
     - system
     - user
 id: bibcite_keyword_admin
-label: 'Keyword (Admin)'
+label: 'Keywords (Admin)'
 module: views
 description: ''
 tag: ''
@@ -315,7 +315,7 @@ display:
           entity_field: name
           plugin_id: string
       sorts: {  }
-      title: Keyword
+      title: Keywords
       header: {  }
       footer: {  }
       empty:
