Issue #3063928 by antongp: Restructure routing/pages

--- a/modules/bibcite_entity/bibcite_entity.links.task.yml
+++ b/modules/bibcite_entity/bibcite_entity.links.task.yml
@@ -3,10 +3,6 @@ entity.bibcite_reference_type.edit_form:
   title: 'Edit'
   route_name: entity.bibcite_reference_type.edit_form
   base_route: entity.bibcite_reference_type.edit_form
-entity.bibcite_reference_type.collection:
-  title: List
-  route_name: entity.bibcite_reference_type.collection
-  base_route: entity.bibcite_reference_type.collection
 entity.bibcite_reference.admin:
   title: Bibliography
   route_name: entity.bibcite_reference.collection
@@ -66,7 +62,7 @@ entity.bibcite_keyword.collection:
 bibcite_entity.reference:
   route_name: bibcite_entity.reference.settings
   title: 'References'
-  base_route: bibcite.settings
+  base_route: bibcite_entity.settings
 
 bibcite_entity.reference.settings:
   route_name: bibcite_entity.reference.settings
@@ -86,7 +82,7 @@ bibcite_entity.reference.types:
 bibcite_entity.contributor:
   route_name: bibcite_entity.contributor.settings
   title: 'Contributors'
-  base_route: bibcite.settings
+  base_route: bibcite_entity.settings
 
 bibcite_entity.contributor.settings:
   route_name: bibcite_entity.contributor.settings
