--- a/modules/bibcite_entity/config/optional/views.view.bibcite_reference_admin.yml
+++ b/modules/bibcite_entity/config/optional/views.view.bibcite_reference_admin.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   module:
     - bibcite_entity
-    - system
     - user
 id: bibcite_reference_admin
 label: 'References (Admin)'
@@ -38,8 +37,8 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
-          reset_button: false
+          submit_button: Filter
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
@@ -82,6 +81,7 @@ display:
             title: title
             type: type
             uid: uid
+            status: status
             changed: changed
             operations: operations
           info:
@@ -110,6 +110,13 @@ display:
               align: ''
               separator: ''
               empty_column: false
+              responsive: priority-low
+            status:
+              sortable: true
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
               responsive: ''
             changed:
               sortable: true
@@ -117,7 +124,7 @@ display:
               align: ''
               separator: ''
               empty_column: false
-              responsive: ''
+              responsive: priority-low
             operations:
               align: ''
               separator: ''
@@ -318,7 +325,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: 'Authored by'
+          label: Author
           exclude: false
           alter:
             alter_text: false
@@ -375,6 +382,73 @@ display:
           field_api_classes: false
           entity_type: bibcite_reference
           entity_field: uid
+          plugin_id: field
+        status:
+          id: status
+          table: bibcite_reference
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: Status
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: boolean
+          settings:
+            format: custom
+            format_custom_true: Published
+            format_custom_false: Unpublished
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: bibcite_reference
+          entity_field: status
           plugin_id: field
         changed:
           id: changed
@@ -576,6 +650,56 @@ display:
           entity_type: bibcite_reference
           entity_field: type
           plugin_id: bundle
+        status:
+          id: status
+          table: bibcite_reference
+          field: status
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: ''
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: Published
+            description: null
+            use_operator: false
+            operator: status_op
+            identifier: status
+            required: true
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+          is_grouped: true
+          group_info:
+            label: 'Published status'
+            description: ''
+            identifier: status
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items:
+              1:
+                title: Published
+                operator: '='
+                value: '1'
+              2:
+                title: Unpublished
+                operator: '='
+                value: '0'
+              3:
+                title: ''
+                operator: '='
+                value: ''
+          entity_type: bibcite_reference
+          entity_field: status
+          plugin_id: boolean
       sorts: {  }
       title: References
       header: {  }
