--- a/modules/bibcite_entity/config/optional/views.view.bibcite_keyword_admin.yml
+++ b/modules/bibcite_entity/config/optional/views.view.bibcite_keyword_admin.yml
@@ -3,7 +3,6 @@ status: true
 dependencies:
   module:
     - bibcite_entity
-    - system
     - user
 id: bibcite_keyword_admin
 label: 'Keywords (Admin)'
@@ -38,8 +37,8 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
-          reset_button: false
+          submit_button: Filter
+          reset_button: true
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
@@ -164,7 +163,7 @@ display:
           relationship: none
           group_type: group
           admin_label: ''
-          label: Label
+          label: Name
           exclude: false
           alter:
             alter_text: false
@@ -287,7 +286,7 @@ display:
           exposed: true
           expose:
             operator_id: name_op
-            label: Label
+            label: Name
             description: ''
             use_operator: false
             operator: name_op
@@ -299,6 +298,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+            placeholder: ''
           is_grouped: false
           group_info:
             label: ''
