Issue #3066411 by antongp: There is no easy way to access Import and Export pages without Admin Toolbar module

--- a/modules/bibcite_export/bibcite_export.links.menu.yml
+++ b/modules/bibcite_export/bibcite_export.links.menu.yml
@@ -3,3 +3,4 @@ bibcite_export.export_all:
   description: 'Export all references'
   parent: entity.bibcite_reference.collection
   route_name: bibcite_export.export_all
+  weight: 60
