Issue #3100514: Add related/recommended modules to composer.json suggest section

--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,16 @@
   "require": {
     "academicpuma/citeproc-php": "~1.0",
     "adci/full-name-parser": "^0.2",
-    "technosophos/LibRIS": "~2.0",
+    "technosophos/libris": "~2.0",
     "audiolabs/bibtexparser": "dev-master",
     "caseyamcl/php-marc21": "~1.0",
     "drupal/entity": "^1.0"
+  },
+  "suggest": {
+    "drupal/bibcite_migrate": "Migrate your bibliographic data from the Bibliography (biblio) module",
+    "drupal/bibcite_crossref": "Provides DOI lookup functionality",
+    "drupal/bibcite_pubmed": "Provides PubMed import and lookup functionality",
+    "drupal/bibcite_altmetric": "Adds Altmetric badges to BibCite reference entities",
+    "drupal/metatag_google_scholar": "Provides number of meta tags to help with indexing of scholarly content/articles in Google Scholar"
   }
 }
