Issue #3106019 by antongp: Drupal 9 compatibility

--- a/modules/bibcite_bibtex/bibcite_bibtex.services.yml
+++ b/modules/bibcite_bibtex/bibcite_bibtex.services.yml
@@ -7,7 +7,7 @@ services:
     class: Drupal\bibcite_bibtex\Normalizer\BibtexReferenceNormalizer
     tags:
       - { name: normalizer, priority: 5 }
-    arguments: ['@entity.manager', '@config.factory']
+    arguments: ['@entity_type.manager', '@config.factory']
     calls:
       - [setFormat, ['bibtex']]
     properties:
