--- a/modules/bibcite_endnote/bibcite_endnote.info.yml
+++ b/modules/bibcite_endnote/bibcite_endnote.info.yml
@@ -2,6 +2,7 @@ name: 'Bibliography & Citation - Endnote'
 type: module
 description: Endnote encode and decode format
 core: '8.x'
+core_version_requirement: ^8 || ^9
 package: 'Bibliography & Citation - Formats'
 dependencies:
   - bibcite:bibcite
