--- a/modules/bibcite_endnote/bibcite_endnote.services.yml
+++ b/modules/bibcite_endnote/bibcite_endnote.services.yml
@@ -15,7 +15,7 @@ services:
     class: Drupal\bibcite_endnote\Normalizer\EndnoteReferenceNormalizer
     tags:
       - { name: normalizer, priority: 5 }
-    arguments: ['@entity.manager', '@config.factory']
+    arguments: ['@entity_type.manager', '@config.factory']
     calls:
       - [setFormat, [['endnote7','endnote8','tagged']]]
     properties:
