--- a/modules/bibcite_export/bibcite_export.info.yml
+++ b/modules/bibcite_export/bibcite_export.info.yml
@@ -2,6 +2,7 @@ name: 'Bibliography & Citation - Export'
 type: module
 description: Export your bibliographic data
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Bibliography & Citation
 dependencies:
   - bibcite:bibcite
