--- a/modules/bibcite_import/bibcite_import.info.yml
+++ b/modules/bibcite_import/bibcite_import.info.yml
@@ -2,6 +2,7 @@ name: 'Bibliography & Citation - Import'
 type: module
 description: Import your bibliographic data
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: Bibliography & Citation
 configure: bibcite_import.settings
 dependencies:
