--- a/modules/bibcite_marc/bibcite_marc.info.yml
+++ b/modules/bibcite_marc/bibcite_marc.info.yml
@@ -2,6 +2,7 @@ name: 'Bibliography & Citation - Marc'
 type: module
 description: MARC encode and decode format
 core: 8.x
+core_version_requirement: ^8 || ^9
 package: 'Bibliography & Citation - Formats'
 dependencies:
   - bibcite:bibcite
