--- a/modules/bibcite_marc/bibcite_marc.services.yml
+++ b/modules/bibcite_marc/bibcite_marc.services.yml
@@ -7,7 +7,7 @@ services:
     class: Drupal\bibcite_marc\Normalizer\MarcReferenceNormalizer
     tags:
       - { name: normalizer, priority: 5 }
-    arguments: ['@entity.manager', '@config.factory']
+    arguments: ['@entity_type.manager', '@config.factory']
     calls:
       - [setFormat, ['marc']]
     properties:
