--- a/modules/bibcite_entity/bibcite_entity.libraries.yml
+++ b/modules/bibcite_entity/bibcite_entity.libraries.yml
@@ -7,3 +7,16 @@ reference.admin:
   css:
     theme:
       css/reference.admin.css: {}
+
+reference.preview:
+  css:
+    theme:
+      css/reference.preview.css: {}
+  js:
+    js/reference.preview.js: {}
+  dependencies:
+    - core/jquery
+    - core/jquery.once
+    - core/drupal
+    - core/drupal.dialog
+    - core/drupal.form
