--- a/modules/bibcite_entity/config/install/bibcite_entity.reference.settings.yml
+++ b/modules/bibcite_entity/config/install/bibcite_entity.reference.settings.yml
@@ -2,3 +2,5 @@ ui_override:
   enable_form_override: true
 display_override:
   reference_page_view_mode: table
+citekey:
+  pattern: bibcite_[bibcite_reference:id]
