Issue #3117638 by antongp: Cannot delete Reference entity revision via admin UI. Get access denied error

--- a/modules/bibcite_entity/bibcite_entity.routing.yml
+++ b/modules/bibcite_entity/bibcite_entity.routing.yml
@@ -46,9 +46,12 @@ entity.bibcite_reference.revision_delete_form:
     _form: '\Drupal\bibcite_entity\Form\ReferenceRevisionDeleteForm'
     _title: 'Delete earlier revision'
   requirements:
-    _access_reference_revision: 'delete'
+    _entity_access_revision: bibcite_reference.delete
   options:
     _admin_route: TRUE
+    parameters:
+      bibcite_reference_revision:
+        type: entity_revision:bibcite_reference
 
 entity.bibcite_reference.collection:
   path: '/admin/content/bibcite/reference'
