Issue #3151063 by u_tiwari: Edition, Issue fields and mappings missing for EndNote8

--- a/modules/bibcite_endnote/bibcite_endnote.bibcite_format.yml
+++ b/modules/bibcite_endnote/bibcite_endnote.bibcite_format.yml
@@ -71,6 +71,8 @@ endnote8:
     - electronic-resource-num
     - pages
     - volume
+    - issue
+    - edition
     - number
     - section
     - abstract
