Issue #3215139 by rluebben: Bibtex Import - @inprocessins mapped to Miscellaneous, should be conference paper

--- a/modules/bibcite_bibtex/config/install/bibcite_entity.mapping.bibtex.yml
+++ b/modules/bibcite_bibtex/config/install/bibcite_entity.mapping.bibtex.yml
@@ -6,7 +6,7 @@ types:
   conference: conference_paper
   inbook: book_chapter
   incollection:
-  inproceedings:
+  inproceedings: conference_paper
   manual:
   mastersthesis:
   misc: miscellaneous
